[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/BottomDisplay/PieceDisplayBox/PieceDisplayBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/pixuf.tres" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Pixuf.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/BottomDisplay/BottomDisplay.gd" type="Script" id=4]
[ext_resource path="res://UI/BottomDisplay/ScoreAndLevel.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="BottomDisplay" type="HBoxContainer"]
margin_right = 448.0
margin_bottom = 104.0
alignment = 2
script = ExtResource( 4 )

[node name="NextPieceControl" type="Control" parent="."]
margin_right = 169.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="NextPiece" parent="NextPieceControl" instance=ExtResource( 1 )]

[node name="ScoreAndLevel" type="VBoxContainer" parent="."]
margin_left = 173.0
margin_right = 274.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
script = ExtResource( 5 )

[node name="Score" type="Control" parent="ScoreAndLevel"]
margin_right = 101.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScoreStatic" type="Label" parent="ScoreAndLevel/Score"]
anchor_bottom = 1.0
margin_right = 40.0
custom_fonts/font = SubResource( 1 )
text = "Score:"

[node name="ScoreNumber" type="Label" parent="ScoreAndLevel/Score"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="Level" type="Control" parent="ScoreAndLevel"]
margin_top = 54.0
margin_right = 101.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelStatic" type="Label" parent="ScoreAndLevel/Level"]
anchor_bottom = 1.0
margin_right = 42.0
custom_fonts/font = SubResource( 3 )
text = "Level:"

[node name="LevelNumber" type="Label" parent="ScoreAndLevel/Level"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
custom_fonts/font = SubResource( 4 )
text = "1"
align = 1

[node name="HeldPieceControl" type="Control" parent="."]
margin_left = 278.0
margin_right = 448.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="HeldPiece" parent="HeldPieceControl" instance=ExtResource( 1 )]
